Revision history for Perl extension FCGI-Engine

0.04 Thurs. July 10, 2008
    - upped the MooseX::Getopt dependency since the 
      old version was causing a test failure in certain
      cases
    
    * FCGI::Engine
      - added docs about our usage of CGI::Simple
      - added docs about usage with Catalyst

    * FCGI::Engine::Manager
      - added docs about usage with Catalyst
      - added example of the config file

0.03 Sun. Feb. 3, 2008
    * FCGI::Engine
      - handler_method was not being used properly 
        to dispatch with (reported by Reed A. Cartwright)
        - added tests for this
       
      - %additional_options can now be passed to run, which 
        will then be passed to both the pre_fork_init sub and 
        the proc_manager's constructor
        - added tests for this
    
      - handler_class can now also be an instance if nessecary
        (thanks to Chris Prather)
    
    * FCGI::Engine::ProcManager
      - added the manager_process_name and the process_name
        options to allow custom process naming
        - added test for this

0.02 Fri. Jan. 11, 2008
    - fixing dependency issues 

0.01 Fri. Jan. 11, 2008
    - hello world